fixed spacing in form and add contacts

--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -23,6 +23,12 @@ p {
   color: white;
   font-size: 200%
 }
+.exl{
+  margin: 35px;
+}
+.fix{
+  margin: 20px;
+}
 
 .size{
   font-size: 5px;
